# tauri-plugin-penetrable

./: Cargo.toml  package.json  readme.md
src/: lib.rs
src/com/: macos.rs  windows.rs
