[package]
name = "tauri-plugin-penetrable"
description = "Using the win32api to achieve click-through of the tauri main window"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = [ "sner21" ]
include = [
    "src/**",
    "Cargo.toml"
]
keywords = ["tauri-plugin","penetrable","ignoreMouseEvents","click-through"]
repository = "https://github.com/sner21/tauri-plugin-penetrable"
categories = ["tauri-plugin"]
readme = "readme.md"
[dependencies]
tauri = "1.4.1"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
