[package]
name = "tauri-plugin-penetrable"
description = "Using the win32api to achieve click-through of the tauri main window"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = [ "sner21" ]
include = [
    "src/**",
    "Cargo.toml"
]
keywords = ["tauri-plugin","penetrable","ignoreMouseEvents","click-through"]
repository = "https://github.com/sner21/tauri-plugin-penetrable"
readme = "readme.md"
[dependencies]
tauri = "2.0.4"


[target."cfg(windows)".dependencies.windows]
version = "0.39.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]